# libsensor

./: build.gradle  jitpack.yml  settings.gradle
app/: build.gradle
app/src/androidTest/java/net/dolearning/dosensorapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/net/dolearning/dosensorapp/: MainActivity.java
app/src/main/res/drawable/: dolearning.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/xml/: config.xml
app/src/test/java/net/dolearning/dosensorapp/: ExampleUnitTest.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
libsensor/: CMakeLists.txt  build.gradle
libsensor/src/androidTest/java/net/dolearning/libsensor/: ExampleInstrumentedTest.java
libsensor/src/main/cpp/: sensor.cpp
libsensor/src/main/java/bitpay/cordova/qrscanner/: QRScanner.java
libsensor/src/main/java/com/randdusing/bluetoothle/: BluetoothLePlugin.java  Operation.java  SequentialCallbackContext.java
libsensor/src/main/java/net/dolearning/libsensor/: BleDeviceInfo.java  DoCordovaActivity.java  DoCordovaPluginHC05.java  DoCordovaPluginSwrSensor.java  DoSwrSensorCordovaCallbackContext.java  DoSystemWebViewClient.java  SwrCalibrationInfo.java  SwrDataLoggerDataInfo.java  SwrDataLoggerInfo.java  SwrDemarcateInfo.java  SwrReadDataFlow.java  SwrSensorInfo.java  Timeout.java  TimeoutCallback.java  Utils.java
libsensor/src/main/res/layout/: activity_dolearning_sensor.xml
libsensor/src/test/java/net/dolearning/libsensor/: ExampleUnitTest.java
